# aEquity

./: .dockerignore  .env.example  .gitignore  =1.12  AUDIT_2026-01-11.md  CLAUDE.md  Dockerfile  HANDOFF-2026-03-20-0000.md  README.md  app.py  batch.py  config.py  main.py  models.py  nixpacks.toml  pipeline.py  pyproject.toml  railway.toml  requirements.txt  scoring_config.py
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: sp500_tickers.json
db/: aequity.db  init.py  migrate.py
docs/: Plan.md
frameworks/: __init__.py  greenblatt.py  marks.py  munger.py  smith.py
jobs/: update_prices.py
scripts/: refresh_sp500.py
services/: alerts.py  dimensions.py  grader.py  guru_price_targets.py  portfolio.py  price_targets.py  watchlist.py
tests/: conftest.py  test_alerts.py  test_analyst_consensus.py  test_batch.py  test_calculator.py  test_calculator_mocked.py  test_config.py  test_db.py  test_frameworks.py  test_grader.py  test_main.py  test_metric_accuracy.py  test_models.py  test_new_db_helpers.py  test_new_metrics.py  test_pipeline_mocked.py  test_pipeline_scoring.py  test_portfolio.py  test_reproducibility.py  test_sec_tools.py  test_validation_helpers.py  test_validator.py  test_watchlist.py
tools/: calculator_tools.py  metric_thresholds.py  sec_tools.py  validator.py
validation/: __main__.py  _helpers.py  analyst_consensus.py  bbw_spot_check.py  guru_targets_spot_check.py  metric_accuracy.py  reproducibility.py  run.py
validation/fixtures/: reference_metrics.json
validation/output/: analyst_outliers.csv  bbw_spot_check.json  (+3 more)
